-XX:+TraceDeoptimization -XX:+Verbose -Xcomp can crash VM

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • svc
    • b10

      By setting -Xcomp, i get an UncommonTrap in one of the java/lang/String constructors:

      Uncommon trap occurred in java.lang.String::<init> (@0x01c8ebb8) thread=5792 reason=unloaded
      action=reinterpret unloaded_class_index=463 unresolved class: java/lang/StringCoding
      DEOPT PACKING thread 0x0132f400 Compiled frame (sp=0x0052f7a0 unextended sp=0x0052f7a0,
      fp=0x0f713a40, real_fp=0x0052f7c0, pc=0x01c8ebb8)
           nmethod 10023 142 java.lang.String::<init> (10 bytes)

           Virtual frames (innermost first):
              0 - frame( sp=0x0052f7a0, unextended_sp=0x0052f7a0, fp=0x0f713a40, pc=0x01c8ebb8)
      java.lang.String.<init>(String.java:414) - invokestatic @ bci 31
              {method} {0x157b366c} '<init>' '([BIILjava/lang/String;)V' in public final synchronized 'java/lang/String'
              bci: 31
              locals:
                 0 conflict
                 1 conflict
                 2 conflict
                 3 conflict
                 4 conflict
              expressions:
                 0 #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # EXCEPTION_ACCESS_VIOLATION (0xc0000005) at pc=0x55218b4f, pid=2524, tid=5792
      #
      # JRE version: Java(TM) SE Runtime Environment (9.0-b05) (build 1.9.0-ea-fastdebug-b05)
      # Java VM: Java HotSpot(TM) Server VM (25.0-b62-internal-debug compiled mode windows-x86 )
      # Problematic frame:
      # V [jvm.dll+0x38b4f] arrayOopDesc::length+0xf
      #
      ..


      The [C array has not been assigned yet, hence crashing.

            Assignee:
            Markus Grönlund
            Reporter:
            Markus Grönlund
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: