8039348: -XX:+TraceDeoptimization -XX:+Verbose -Xcomp can crash VM

Reviewed-by: kvn, sla